adicionando o modulo hbs para rederizar as views

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ironhack-web-pt-sao-paulo-fev-2019/aula-nodejs#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "hbs": "^4.0.3"
   }
 }
